fixed clipping on profile update

--- a/public/stylesheets/roundcorners.css
+++ b/public/stylesheets/roundcorners.css
@@ -42,7 +42,7 @@
 	background-color:#ddddff;
 	width:100%;
 	margin:0px auto;
-	padding:0px;
+	padding:0px 0px 10px 0px;
 	
 }
 
